--- a/EliteCallControl/EliteCallControl-ear/.settings/org.eclipse.wst.common.component
+++ b/EliteCallControl/EliteCallControl-ear/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="EliteUC-ear-1.0.0.0.0">
+    <wb-module deploy-name="EliteCallControl-ear-1.0.0.0.0">
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/ear-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/application" tag="defaultRootSource"/>
         <dependent-module archiveName="EliteCallControl-war-1.0.0.0.0.war" deploy-path="/" handle="module:/resource/EliteCallControl-war/EliteCallControl-war">
